Chapter 3 — Listing 3.9: UncontrolledInheritance.java Demonstrates: the risks of uncontrolled inheritance where a subclass